--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.27.0'
-DFX_NETWORK='ic'
+DFX_NETWORK='local'
 CANISTER_CANDID_PATH_BACKEND='/home/smart_con_tractor/canisters/color_palette_generator/backend/backend.did'
 CANISTER_ID_INTERNET_IDENTITY='rdmx6-jaaaa-aaaaa-aaadq-cai'
-CANISTER_ID_FRONTEND='rbp4m-aqaaa-aaaae-qfd3a-cai'
-CANISTER_ID_BACKEND='rimxq-wyaaa-aaaae-qfd2q-cai'
-CANISTER_ID='rbp4m-aqaaa-aaaae-qfd3a-cai'
-CANISTER_CANDID_PATH='/home/smart_con_tractor/canisters/color_palette_generator/.dfx/ic/canisters/frontend/assetstorage.did'
+CANISTER_ID_FRONTEND='u6s2n-gx777-77774-qaaba-cai'
+CANISTER_ID_BACKEND='uxrrr-q7777-77774-qaaaq-cai'
+CANISTER_ID='u6s2n-gx777-77774-qaaba-cai'
+CANISTER_CANDID_PATH='/home/smart_con_tractor/canisters/color_palette_generator/.dfx/local/canisters/frontend/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
